sandbox-codebase/objects/heymarket__Message__c/heymarket__Message__c.object-meta.xml
<CustomObject>
    <description>This object is used to store heymarket messages (chat history).</description>
    <label>Message</label>
    <nameField>
        <displayFormat>MSG-{0000}</displayFormat>
        <label>Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>