sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Account__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Id. This field will be populated id message is related to a Account.</description>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>