sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Broadcast_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Broadcast_Id__c</fullName>
    <description>Heymarket broadcast id of message.</description>
    <label>Broadcast Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>