sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Contact__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact Id. This field will be populated if message is related to a Contact.</description>
    <label>Contact Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contact_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>