sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Conversation_Id__c</fullName>
    <description>Conversation id of heymarket message.</description>
    <label>Conversation Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>