sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Created_On_Heymarket__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Created_On_Heymarket__c</fullName>
    <description>The time when the message was created in Heymarket.</description>
    <label>Created On Heymarket</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>