sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Error__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Error__c</fullName>
    <description>Error message in case of failed message.</description>
    <label>Error</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>