sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__External_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__External_Id__c</fullName>
    <description>id of heymarket message.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>