sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__From_Utility__c.field-meta.xml
<CustomField>
    <fullName>heymarket__From_Utility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will track the message if sent from Utility</description>
    <label>From Utility</label>
    <type>Checkbox</type>
</CustomField>