sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Heymarket_User_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Heymarket_User_Id__c</fullName>
    <description>Heymarket Id of the User used to send the message from Salesforce</description>
    <label>Heymarket User Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>