sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Heymarket_User_Name__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Heymarket_User_Name__c</fullName>
    <description>Name of the user who sent the message</description>
    <label>Heymarket User Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>