sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Inbox_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Inbox_Id__c</fullName>
    <description>heymarket inbox id of message.</description>
    <label>Inbox Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>