sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Inbox_Number__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Inbox_Number__c</fullName>
    <description>Inbox phone number.</description>
    <label>Inbox Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>