sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Is_Bulk__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Is_Bulk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the message is sent from List SMS or Campaign SMS then it will be set to true. Otherwise, false by default</description>
    <label>Is Bulk</label>
    <type>Checkbox</type>
</CustomField>