sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Is_Campaign__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Is_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the message is sent from Campaign SMS then it will be set to true. Otherwise, false by default</description>
    <label>Is Campaign</label>
    <type>Checkbox</type>
</CustomField>