sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Is_Flow__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Is_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the message is sent via automation then this field will be true. Otherwise false by default.</description>
    <label>Is Flow</label>
    <type>Checkbox</type>
</CustomField>