sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Is_From_Chat_Load__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Is_From_Chat_Load__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the message is saved via chat load then this field will be true. Otherwise false by default.</description>
    <label>Is From Chat Load</label>
    <type>Checkbox</type>
</CustomField>