sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Is_Updated__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Is_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the message is Send from List or Automation then it will be created in Salesforce after sometime it will be updated with the delivery receipt and this field will be market true.</description>
    <label>Is Updated</label>
    <type>Checkbox</type>
</CustomField>