sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Last_Sent_Message__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Last_Sent_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Last Sent Message Id. This field will be populated with the Id of the last sent message.</description>
    <label>Last Sent Message Id</label>
    <referenceTo>heymarket__Message__c</referenceTo>
    <relationshipName>Last_Sent_Message</relationshipName>
    <type>Lookup</type>
</CustomField>