sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Lead__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead Id. This field will be populated if message is related to a Lead.</description>
    <label>Lead Id</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Lead_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>