sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__List_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__List_Message_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>List Message Id</label>
    <referenceTo>heymarket__List_Message__c</referenceTo>
    <relationshipLabel>List Messages</relationshipLabel>
    <relationshipName>List_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>