sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Local_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Local_Id__c</fullName>
    <description>For internal purpose</description>
    <label>Local Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>