sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Media__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Media__c</fullName>
    <description>media URLs</description>
    <label>Media</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>