sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Salesforce_User_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Salesforce_User_Id__c</fullName>
    <description>Salesforce Id of the User used to send the message from Salesforce</description>
    <label>Salesforce User Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>