sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Sf_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Sf_Record_Id__c</fullName>
    <description>This will contain the Record Id of the object for which the message will be related.</description>
    <label>Salesforce Record ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>