sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__SMS_Type__c.field-meta.xml
<CustomField>
    <fullName>heymarket__SMS_Type__c</fullName>
    <description>Formula field to get the type of the message(Campaign,Manual,Flow,List)</description>
    <formula>IF( heymarket__Is_Bulk__c ,&apos;List SMS&apos; ,  IF( heymarket__Is_Campaign__c , &apos;Campaign&apos;,  IF( heymarket__Is_Flow__c , &apos;Flow&apos;, &apos;Manual&apos;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMS Type</label>
    <type>Text</type>
</CustomField>