sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Status__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Status__c</fullName>
    <description>Status of the message</description>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>