sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Targeted_Phone__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Targeted_Phone__c</fullName>
    <description>Customers&apos; phone number.</description>
    <label>Targeted Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>