sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Template__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Template used to send the message.</description>
    <label>Template</label>
    <referenceTo>heymarket__Template__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Templates</relationshipName>
    <type>Lookup</type>
</CustomField>