sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Text__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Text__c</fullName>
    <description>Text contents of the message.</description>
    <label>Text</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>