sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Type__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Type__c</fullName>
    <description>e.g. text, system, memo</description>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>