sandbox-codebase/objects/heymarket__Message__c/fields/heymarket__Updated_On_Heymarket__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Updated_On_Heymarket__c</fullName>
    <label>Updated On Heymarket</label>
    <type>DateTime</type>
</CustomField>