sandbox-codebase/objects/heymarket__Message__c/listViews/heymarket__All_Messages.listView-meta.xml
<ListView>
    <fullName>heymarket__All_Messages</fullName>
    <columns>NAME</columns>
    <columns>heymarket__Created_On_Heymarket__c</columns>
    <columns>heymarket__Inbox_Number__c</columns>
    <columns>heymarket__Account__c</columns>
    <columns>heymarket__Contact__c</columns>
    <columns>heymarket__Lead__c</columns>
    <columns>heymarket__Targeted_Phone__c</columns>
    <columns>heymarket__Status__c</columns>
    <columns>heymarket__Text__c</columns>
    <columns>heymarket__Type__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Messages</label>
</ListView>